feat(post): add delete post endpoint
